refactor: 유틸리티 메서드에서 string 의 isBlank() 메서드 사용하는 것으로 변경