@@ -1,7 +1,7 @@
 package util;
 
 public class StringUtils {
-    public static boolean isBlank(String csv) {
-        return csv == null || csv.trim().isEmpty();
+    public static boolean isBlank(String string) {
+        return string == null || string.isBlank();
     }
 }
